--- a/index.html
+++ b/index.html
@@ -50,45 +50,44 @@
           rápida, organização e compromisso com a qualidade das entregas.
         </p>
 
-          <div class="tech-box">
-  <h3 class="tech-title">Tecnologias</h3>
+        <div class="tech-box">
+          <h3 class="tech-title">Tecnologias</h3>
 
-  <div class="tech-category">
-    <h4 class="tech-category-title">Frontend</h4>
-    <div class="tech-list">
-      <span class="tech-item">HTML</span>
-      <span class="tech-item">CSS</span>
-      <span class="tech-item">JavaScript</span>
-      <span class="tech-item">React</span>
-    </div>
-  </div>
+          <div class="tech-category">
+            <h4 class="tech-category-title">Frontend</h4>
+            <div class="tech-list">
+              <span class="tech-item">HTML</span>
+              <span class="tech-item">CSS</span>
+              <span class="tech-item">JavaScript</span>
+              <span class="tech-item">React</span>
+            </div>
+          </div>
 
-  <div class="tech-category">
-    <h4 class="tech-category-title">Backend</h4>
-    <div class="tech-list">
-      <span class="tech-item">Node.js</span>
-      <span class="tech-item">Express</span>
-      <span class="tech-item">API REST</span>
-      <span class="tech-item">MongoDB</span>
-    </div>
-  </div>
+          <div class="tech-category">
+            <h4 class="tech-category-title">Backend</h4>
+            <div class="tech-list">
+              <span class="tech-item">Node.js</span>
+              <span class="tech-item">Express</span>
+              <span class="tech-item">API REST</span>
+              <span class="tech-item">MongoDB</span>
+            </div>
+          </div>
 
-  <div class="tech-category">
-    <h4 class="tech-category-title">Automação</h4>
-    <div class="tech-list">
-      <span class="tech-item">n8n</span>
-    </div>
-  </div>
+          <div class="tech-category">
+            <h4 class="tech-category-title">Automação</h4>
+            <div class="tech-list">
+              <span class="tech-item">n8n</span>
+            </div>
+          </div>
 
-  <div class="tech-category">
-    <h4 class="tech-category-title">Versionamento & Deploy</h4>
-    <div class="tech-list">
-      <span class="tech-item">Git</span>
-      <span class="tech-item">GitHub</span>
-      <span class="tech-item">Deploy</span>
-    </div>
-  </div>
-</div>
+          <div class="tech-category">
+            <h4 class="tech-category-title">Versionamento & Deploy</h4>
+            <div class="tech-list">
+              <span class="tech-item">Git</span>
+              <span class="tech-item">GitHub</span>
+              <span class="tech-item">Deploy</span>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -97,51 +96,101 @@
       <h2 class="projects-title">Meus Projetos</h2>
       <div class="projects-box">
         <div class="project-cards">
-  <div class="project-media">
-  <img
-    src="./assets/gsa-sports.png"
-    alt="Site GSA"
-    class="img-project"
-  />
+          <div class="project-media">
+            <img
+              src="./assets/gsa-sports.png"
+              alt="Site GSA"
+              class="img-project"
+            />
 
-  <div class="project-overlay">
-    <span>HTML</span>
-    <span>CSS</span>
-    <span>JavaScript</span>
-  </div>
-</div>
+            <div class="project-overlay">
+              <span>HTML</span>
+              <span>CSS</span>
+              <span>JavaScript</span>
+            </div>
+          </div>
 
-  <div class="box-text-project">
-    <h3 class="info-project">GSA Sports</h3>
+          <div class="box-text-project">
+            <h3 class="info-project">GSA Sports</h3>
 
-    <p class="p-cards">
-      Landing page moderna com scroll infinito e design responsivo para
-      uma empresa de agenciamento e assessoria de atletas de futebol.
-    </p>
+            <p class="p-cards">
+              Landing page moderna com scroll infinito e design responsivo para
+              uma empresa de agenciamento e assessoria de atletas de futebol.
+            </p>
 
-    <div class="project-links">
-      <a href="https://gsa-sports.netlify.app/" target="_blank" class="project-btn">
-        Ver Projeto
-      </a>
+            <div class="project-links">
+              <a
+                href="https://gsa-sports.netlify.app/"
+                target="_blank"
+                class="project-btn"
+              >
+                Ver Projeto
+              </a>
 
-      <a href="https://github.com/brotherson10/gsa-sports-landpg" target="_blank" class="project-btn outline">
-        GitHub
-      </a>
-    </div>
-  </div>
-</div>
+              <a
+                href="https://github.com/brotherson10/gsa-sports-landpg"
+                target="_blank"
+                class="project-btn outline"
+              >
+                GitHub
+              </a>
+            </div>
+          </div>
+        </div>
 
         <div class="project-cards">
           <div class="project-media">
-          <img
-            src="./assets/sohard-energia-solar.png"
-            alt="Site Sohard"
-            class="img-project"
-          />
-          <div class="project-overlay">
-    <span>HTML</span>
-    <span>CSS</span>
-  </div>
+            <img
+              src="./assets/jokenpo.png"
+              alt="JokenPô"
+              class="img-project"
+            />
+
+            <div class="project-overlay">
+              <span>HTML</span>
+              <span>CSS</span>
+              <span>JavaScript</span>
+            </div>
+          </div>
+
+          <div class="box-text-project">
+            <h3 class="info-project">JokenPô</h3>
+
+            <p class="p-cards">
+              Projeto front-end desenvolvido para aplicar conceitos de lógica em JavaScript e manipulação do DOM em um cenário interativo real.
+            </p>
+
+            <div class="project-links">
+              <a
+                href="https://jokenpo-brother.netlify.app/"
+                target="_blank"
+                class="project-btn"
+              >
+                Ver Projeto
+              </a>
+
+              <a
+                href="https://github.com/brotherson10/JokenPo-DevClub"
+                target="_blank"
+                class="project-btn outline"
+              >
+                GitHub
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="project-cards">
+          <div class="project-media">
+            <img
+              src="./assets/sohard-energia-solar.png"
+              alt="Site Sohard"
+              class="img-project"
+            />
+            <div class="project-overlay">
+              <span>HTML</span>
+              <span>CSS</span>
+            </div>
           </div>
           <div class="box-text-project">
             <h3 class="info-project">Sohard Energia Solar</h3>
@@ -150,58 +199,75 @@
               da empresa Sohard Energia Solar
             </p>
             <div class="project-links">
-      <a href="https://sohard-solar.netlify.app/" target="_blank" class="project-btn">
-        Ver Projeto
-      </a>
+              <a
+                href="https://sohard-solar.netlify.app/"
+                target="_blank"
+                class="project-btn"
+              >
+                Ver Projeto
+              </a>
 
-      <a href="https://github.com/brotherson10/landing-solar" target="_blank" class="project-btn outline">
-        GitHub
-      </a>
-    </div>
+              <a
+                href="https://github.com/brotherson10/landing-solar"
+                target="_blank"
+                class="project-btn outline"
+              >
+                GitHub
+              </a>
+            </div>
           </div>
         </div>
 
         <div class="project-cards">
           <div class="project-media">
-          <img
-            src="./assets/dev-burger.png"
-            alt="Site BurgerHouse"
-            class="img-project"
-          />
-          <div class="project-overlay">
-    <span>HTML</span>
-    <span>CSS</span>
-    <span>JavaScript</span>
-  </div>
-  </div>
+            <img
+              src="./assets/dev-burger.png"
+              alt="Site BurgerHouse"
+              class="img-project"
+            />
+            <div class="project-overlay">
+              <span>HTML</span>
+              <span>CSS</span>
+              <span>JavaScript</span>
+            </div>
+          </div>
           <div class="box-text-project">
             <h3 class="info-project">Burger House</h3>
             <p class="p-cards">
-              Landing page moderna com menu para apresentação de Hamburgueria e foco em UX
+              Landing page moderna com menu para apresentação de Hamburgueria e
+              foco em UX
             </p>
             <div class="project-links">
-      <a href="https://devburger-house.netlify.app/" target="_blank" class="project-btn">
-        Ver Projeto
-      </a>
+              <a
+                href="https://devburger-house.netlify.app/"
+                target="_blank"
+                class="project-btn"
+              >
+                Ver Projeto
+              </a>
 
-      <a href="https://github.com/brotherson10/burger-house" target="_blank" class="project-btn outline">
-        GitHub
-      </a>
-    </div>
+              <a
+                href="https://github.com/brotherson10/burger-house"
+                target="_blank"
+                class="project-btn outline"
+              >
+                GitHub
+              </a>
+            </div>
           </div>
         </div>
 
         <div class="project-cards">
           <div class="project-media">
-          <img
-            src="./assets/cafe-cafena.png"
-            alt="Site Café"
-            class="img-project"
-          />
-          <div class="project-overlay">
-    <span>HTML</span>
-    <span>CSS</span>
-  </div>
+            <img
+              src="./assets/cafe-cafena.png"
+              alt="Site Café"
+              class="img-project"
+            />
+            <div class="project-overlay">
+              <span>HTML</span>
+              <span>CSS</span>
+            </div>
           </div>
           <div class="box-text-project">
             <h3 class="info-project">Café Cafena</h3>
@@ -210,30 +276,38 @@
               responsivo
             </p>
             <div class="project-links">
-      <a href="https://cafe-cafena.netlify.app/" target="_blank" class="project-btn">
-        Ver Projeto
-      </a>
+              <a
+                href="https://cafe-cafena.netlify.app/"
+                target="_blank"
+                class="project-btn"
+              >
+                Ver Projeto
+              </a>
 
-      <a href="https://github.com/brotherson10/Landing-page-Cafeteria" target="_blank" class="project-btn outline">
-        GitHub
-      </a>
-    </div>
+              <a
+                href="https://github.com/brotherson10/Landing-page-Cafeteria"
+                target="_blank"
+                class="project-btn outline"
+              >
+                GitHub
+              </a>
+            </div>
           </div>
         </div>
 
         <div class="project-cards">
           <div class="project-media">
-          <img
-            src="./assets/devclub-store.png"
-            alt="Site DevStore"
-            class="img-project"
-          />
-          <div class="project-overlay">
-    <span>HTML</span>
-    <span>CSS</span>
-    <span>JavaScript</span>
-  </div>
-</div>
+            <img
+              src="./assets/devclub-store.png"
+              alt="Site DevStore"
+              class="img-project"
+            />
+            <div class="project-overlay">
+              <span>HTML</span>
+              <span>CSS</span>
+              <span>JavaScript</span>
+            </div>
+          </div>
 
           <div class="box-text-project">
             <h3 class="info-project">DevClub Store</h3>
@@ -242,81 +316,89 @@
               responsivo
             </p>
             <div class="project-links">
-      <a href="https://store-devclub.netlify.app/" target="_blank" class="project-btn">
-        Ver Projeto
-      </a>
+              <a
+                href="https://store-devclub.netlify.app/"
+                target="_blank"
+                class="project-btn"
+              >
+                Ver Projeto
+              </a>
 
-      <a href="https://github.com/brotherson10/landing-page-devclubstore" target="_blank" class="project-btn outline">
-        GitHub
-      </a>
-    </div>
+              <a
+                href="https://github.com/brotherson10/landing-page-devclubstore"
+                target="_blank"
+                class="project-btn outline"
+              >
+                GitHub
+              </a>
+            </div>
           </div>
         </div>
       </div>
     </section>
 
-  <section id="contatos" class="contacts">
-  <h2 class="contacts-title">Vamos Conversar?</h2>
+    <section id="contatos" class="contacts">
+      <h2 class="contacts-title">Vamos Conversar?</h2>
 
-  <p class="contacts-subtitle">
-    Se quiser saber mais sobre mim ou trabalhar junto, me chama em uma das opções abaixo 👇
-  </p>
+      <p class="contacts-subtitle">
+        Se quiser saber mais sobre mim ou trabalhar junto, me chama em uma das
+        opções abaixo 👇
+      </p>
 
-  <div class="contacts-links">
-    <a
-      href="https://wa.me/351933368428?text=Olá%20Brotherson!%20Vi%20seu%20portfólio%20e%20gostaria%20de%20conversar."
-      target="_blank"
-      class="contact-item whatsapp"
-    >
-      💬 WhatsApp
-    </a>
+      <div class="contacts-links">
+        <a
+          href="https://wa.me/351933368428?text=Olá%20Brotherson!%20Vi%20seu%20portfólio%20e%20gostaria%20de%20conversar."
+          target="_blank"
+          class="contact-item whatsapp"
+        >
+          💬 WhatsApp
+        </a>
 
-    <a
-      href="https://www.linkedin.com/in/brotherson/"
-      target="_blank"
-      class="contact-item"
-    >
-      🔗 LinkedIn
-    </a>
+        <a
+          href="https://www.linkedin.com/in/brotherson/"
+          target="_blank"
+          class="contact-item"
+        >
+          🔗 LinkedIn
+        </a>
 
-    <a
-      href="https://github.com/brotherson10/"
-      target="_blank"
-      class="contact-item"
-    >
-      🐙 GitHub
-    </a>
-  </div>
+        <a
+          href="https://github.com/brotherson10/"
+          target="_blank"
+          class="contact-item"
+        >
+          🐙 GitHub
+        </a>
+      </div>
 
-  <div class="contact-email">
-    <span class="email-text">brotherson100@gmail.com</span>
-    <button class="copy-btn" onclick="copyEmail()">📋</button>
-  </div>
+      <div class="contact-email">
+        <span class="email-text">brotherson100@gmail.com</span>
+        <button class="copy-btn" onclick="copyEmail()">📋</button>
+      </div>
 
-  <span class="contact-location">📍 Lisboa, Portugal</span>
+      <span class="contact-location">📍 Lisboa, Portugal</span>
 
-  <div id="toast" class="toast">Email copiado!</div>
-  
-  <br>
+      <div id="toast" class="toast">Email copiado!</div>
 
-  <form class="contacts-form" id="form">
-    <div class="group-form">
-      <input placeholder="Nome" type="text" class="area-form" id="name" />
-    </div>
+      <br />
 
-    <div class="group-form">
-      <textarea
-        placeholder="Digite sua mensagem"
-        class="area-form"
-        rows="6"
-        id="message"
-      ></textarea>
-    </div>
+      <form class="contacts-form" id="form">
+        <div class="group-form">
+          <input placeholder="Nome" type="text" class="area-form" id="name" />
+        </div>
 
-    <button type="submit" class="button-form">Enviar Mensagem</button>
-  </form>
-</section>
+        <div class="group-form">
+          <textarea
+            placeholder="Digite sua mensagem"
+            class="area-form"
+            rows="6"
+            id="message"
+          ></textarea>
+        </div>
 
+        <button type="submit" class="button-form">Enviar Mensagem</button>
+      </form>
+    </section>
   </body>
   <script src="./scripts.js"></script>
 </html>
